[package]
name = "async-enet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
random = "0.13.2"
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["net", "time", "full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["std", "env-filter", "fmt"] }
