[package]
name = "async-enet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "enet"
path = "src/lib.rs"

[dependencies]
bytes = "1.4.0"
random = "0.13.2"
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["net", "time", "full"] }
tracing = "0.1.37"
async-trait = "0.1.36"
tracing-subscriber = { version = "0.3.16", features = ["std", "env-filter", "fmt"] }
quickcheck_async = "0.1.1"
futures = "0.3.28"
once_cell = "1.18.0"


[dev-dependencies]
quickcheck = "1"
arbitrary = "1"
orig-enet = {version = "0.3", package = "enet"}
anyhow = "1"
