[package]
name = "async-enet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "enet"
path = "src/lib.rs"

[features]
fuzzing = ["arbitrary"]
# arbitrary = []

[dependencies]
bytes = "1.4.0"
random = "0.13.2"
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["net", "time", "full"] }
tracing = "0.1.37"
async-trait = "0.1.36"
tracing-subscriber = { version = "0.3.16", features = ["std", "env-filter", "fmt"] }
futures = "0.3.28"
arbitrary = {version = "1", features=["derive"], optional=true}


[dev-dependencies]
quickcheck = "1"
orig-enet = {version = "0.3", package = "enet"}
anyhow = "1"
quickcheck_async = "0.1.1"
once_cell = "1.18.0"
